fixes bullet spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -92,8 +92,8 @@ header {
 	border: 2px solid pink;
 }
 .container  {
-	padding: 10px;
-	margin: 10px;
+	padding: 5px;
+	margin: 5px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
@@ -103,8 +103,8 @@ header {
 	border: 2px solid green;
 }
 .box {
-	margin: 5px;
-	padding: 5px;
+	margin: 20px;
+	padding: 20px;
 	border: 2px solid black;
 	width: 600px;
 	text-align: left;
@@ -134,6 +134,10 @@ ul {
 	margin: 5px;
 	padding: 5px;
 }
+li {
+	margin: 10px;
+}
+
 .last {
 	width: 500px;
 	margin: 10px;
@@ -144,7 +148,7 @@ ul {
 
 hr {
 	display: block;
-	width: 95%;
+	width: 97%;
 	margin-left: auto;
 	margin-right: auto;
     overflow: hidden;
